# llm_governance_monitoring

./: .gitignore  LICENSE  Makefile  README.md
back/: pyproject.toml
back/evaluation/: Dockerfile  main.py  pyproject.toml
back/evaluation/jobs/: eval_runner.py
back/evaluation/routers/: ab.py  config.py  eval.py  matrix.py
back/evaluation/services/: judge_config.py  langfuse_client.py  redis_consumer.py
back/llm-gateway/: Dockerfile  main.py  pyproject.toml
back/llm-gateway/routers/: chat.py
back/llm-gateway/services/: litellm_client.py  redis_publisher.py
back/observability/: Dockerfile  main.py  pyproject.toml
back/observability/routers/: grafana.py  metrics.py  traces.py
back/observability/services/: langfuse_client.py  prometheus_client.py
back/shared/: pyproject.toml
back/shared/src/shared/: config.py  schemas.py
front/: Dockerfile  README.md  nginx.conf  package.json  pnpm-lock.yaml
front/components/: MessageScore.vue
front/src/: App.vue
front/src/api/: client.ts
front/src/components/: MessageScore.vue
front/src/router/: index.ts
front/src/stores/: chat.ts  judge.ts
front/src/views/: ABTestView.vue  ChatView.vue  MatrixView.vue  MetricsView.vue  SettingsView.vue  TracesView.vue
infra/: .env.example  docker-compose.yml  litellm_config.yaml  prometheus.yml
infra/caddy/: Caddyfile
